@@ -10,7 +10,7 @@ notTeam: '&6&4That team does not exist try &b/team create <name>'
 needSameTeam: '&6You are not in the same team as that person'
 noPerm: '&4You do not have permission to do that'
 prefixSyntax: '&7[%s&7] &r%s'
-bannedChar: '&4A character you tried to use is banned"'
+bannedChar: '&4A character you tried to use is banned'
 noTeam: '&4That team does not exist'
 loading: '&6Loading'
 cooldown.wait: '&4You need to wait another %s seconds before running that!'
